force-app/main/default/objects/Policy__c/fields/Agency_Address__c.field-meta.xml
<CustomField>
    <fullName>Agency_Address__c</fullName>
    <formula>Insured__r.Agent_Address_Application__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Address</label>
    <type>Text</type>
</CustomField>