force-app/main/default/objects/Policy__c/fields/Agency_City__c.field-meta.xml
<CustomField>
    <fullName>Agency_City__c</fullName>
    <formula>Insured__r.Agent_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency City</label>
    <type>Text</type>
</CustomField>