force-app/main/default/objects/Policy__c/fields/Agency_State__c.field-meta.xml
<CustomField>
    <fullName>Agency_State__c</fullName>
    <formula>Insured__r.Agent_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency State</label>
    <type>Text</type>
</CustomField>