force-app/main/default/objects/Policy__c/fields/Agency_Zip__c.field-meta.xml
<CustomField>
    <fullName>Agency_Zip__c</fullName>
    <formula>Insured__r.Agent_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Zip</label>
    <type>Text</type>
</CustomField>