force-app/main/default/objects/Policy__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <formula>Insured__r.Agent_Name_Application__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent</label>
    <type>Text</type>
</CustomField>