force-app/main/default/objects/Policy__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <formula>Invoice__r.breadwinner_qbo__Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>