force-app/main/default/objects/Policy__c/fields/Annual_Premium2__c.field-meta.xml
<CustomField>
    <fullName>Annual_Premium2__c</fullName>
    <formula>/*(10/9) *   QB_Total_Invoice_Amount__c*/
 QB_Total_Invoice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Premium Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>