force-app/main/default/objects/Policy__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <label>Check#</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>