force-app/main/default/objects/Policy__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Insured__r.Physical_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>