force-app/main/default/objects/Policy__c/fields/City_mail__c.field-meta.xml
<CustomField>
    <fullName>City_mail__c</fullName>
    <formula>Insured__r.Mailing_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>