force-app/main/default/objects/Policy__c/fields/Contact_Person_at_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_at_Location__c</fullName>
    <formula>Insured__r.Contact_Person_at_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person at Location</label>
    <type>Text</type>
</CustomField>