force-app/main/default/objects/Policy__c/fields/Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Name__c</fullName>
    <formula>Insured__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Name</label>
    <type>Text</type>
</CustomField>