force-app/main/default/objects/Policy__c/fields/Lapse__c.field-meta.xml
<CustomField>
    <fullName>Lapse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Renewal</label>
    <type>Checkbox</type>
</CustomField>