force-app/main/default/objects/Policy__c/fields/Mailing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_2__c</fullName>
    <formula>Insured__r.Mailing_Address2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address 2</label>
    <type>Text</type>
</CustomField>