force-app/main/default/objects/Policy__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <formula>Insured__r.Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>