force-app/main/default/objects/Policy__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <formula>Invoice__r.breadwinner_qbo__Fully_Paid_On_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>