force-app/main/default/objects/Policy__c/fields/Physical_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_2__c</fullName>
    <formula>Insured__r.Physical_Street_Address__c</formula>
    <label>Physical Address 2</label>
    <type>Text</type>
</CustomField>