force-app/main/default/objects/Policy__c/fields/Physical_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Location_Address__c</fullName>
    <formula>Insured__r.Physical_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Location Address</label>
    <type>Text</type>
</CustomField>