force-app/main/default/objects/Policy__c/fields/Policy_Active__c.field-meta.xml
<CustomField>
    <fullName>Policy_Active__c</fullName>
    <formula>AND((Policy_Period_Begins__c &lt; TODAY()),(TODAY() &lt;  PPE2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Active?</label>
    <type>Checkbox</type>
</CustomField>