force-app/main/default/objects/Policy__c/fields/Policy_Period_Begins__c.field-meta.xml
<CustomField>
    <fullName>Policy_Period_Begins__c</fullName>
    <label>Policy Year Begins</label>
    <type>Date</type>
</CustomField>