force-app/main/default/objects/Policy__c/fields/Policy_Period_Ends__c.field-meta.xml
<CustomField>
    <fullName>Policy_Period_Ends__c</fullName>
    <label>Policy Period EndsOLD</label>
    <type>Date</type>
</CustomField>