force-app/main/default/objects/Policy__c/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <label>Policy Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 19</fullName>
            </value>
            <value>
                <fullName>05 20</fullName>
            </value>
            <value>
                <fullName>03 21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>