force-app/main/default/objects/Policy__c/fields/Policy_Year_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Policy_Year_Adjustment__c</fullName>
    <label>Policy Year Reduction?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>