force-app/main/default/objects/Policy__c/fields/PPE2__c.field-meta.xml
<CustomField>
    <fullName>PPE2__c</fullName>
    <formula>Policy_Period_Begins__c  + 365- Policy_Year_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Year Ends</label>
    <type>Date</type>
</CustomField>