force-app/main/default/objects/Policy__c/fields/Premium_Received__c.field-meta.xml
<CustomField>
    <fullName>Premium_Received__c</fullName>
    <label>Premium Received</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>