force-app/main/default/objects/Policy__c/fields/Previous_Policy__c.field-meta.xml
<CustomField>
    <fullName>Previous_Policy__c</fullName>
    <label>Previous Policy#</label>
    <length>15</length>
    <type>Text</type>
</CustomField>