force-app/main/default/objects/Policy__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <formula>Insured__r.Agent_to_Bill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer</label>
    <type>Text</type>
</CustomField>