force-app/main/default/objects/Policy__c/fields/QB_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>QB_Amount_Received__c</fullName>
    <formula>QB_Invoice__r.Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>