force-app/main/default/objects/Policy__c/fields/QB_Invoice__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QB Invoice</label>
    <referenceTo>QB_Invoice__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>