force-app/main/default/objects/Policy__c/fields/QB_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Date__c</fullName>
    <formula>QB_Invoice__r.Fully_Paid_On_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>