force-app/main/default/objects/Policy__c/fields/QB_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>QB_Status_Flag__c</fullName>
    <formula>QB_Invoice__r.QB_Status_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>