force-app/main/default/objects/Policy__c/fields/QB_Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>QB_Total_Invoice_Amount__c</fullName>
    <formula>QB_Invoice__r.Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>