force-app/main/default/objects/Policy__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>from Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Policy</relationshipLabel>
    <relationshipName>Policy</relationshipName>
    <type>Lookup</type>
</CustomField>