force-app/main/default/objects/Policy__c/fields/Remain_in_Premium_Acct__c.field-meta.xml
<CustomField>
    <fullName>Remain_in_Premium_Acct__c</fullName>
    <formula>QB_Amount_Received__c  * (0.28)*(10/9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remittance to Operating (28%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>