force-app/main/default/objects/Policy__c/fields/Remittance_to_CUG__c.field-meta.xml
<CustomField>
    <fullName>Remittance_to_CUG__c</fullName>
    <formula>QB_Amount_Received__c  * (0.12)*(10/9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remittance to CUG (12%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>