force-app/main/default/objects/Policy__c/fields/Renew_Alert__c.field-meta.xml
<CustomField>
    <fullName>Renew_Alert__c</fullName>
    <label>Renew Alert</label>
    <length>1</length>
    <type>Text</type>
</CustomField>