force-app/main/default/objects/Policy__c/fields/Renewed__c.field-meta.xml
<CustomField>
    <fullName>Renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove from Renewal List</label>
    <type>Checkbox</type>
</CustomField>