force-app/main/default/objects/Policy__c/fields/Reserve_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Amount__c</fullName>
    <formula>Annual_Premium2__c *(1/2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserve Amount (50%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>