force-app/main/default/objects/Policy__c/fields/Reserve_Expires__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Expires__c</fullName>
    <formula>PPE2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserve Expires</label>
    <type>Date</type>
</CustomField>