force-app/main/default/objects/Policy__c/fields/Reserve_N__c.field-meta.xml
<CustomField>
    <fullName>Reserve_N__c</fullName>
    <formula>Annual_Premium2__c /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserve (N)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>