force-app/main/default/objects/Policy__c/fields/Retained_by_Agent_10__c.field-meta.xml
<CustomField>
    <fullName>Retained_by_Agent_10__c</fullName>
    <formula>QB_Amount_Received__c  * (1/10)*(10/9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retained by Agent (10%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>