force-app/main/default/objects/Policy__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Insured__r.Physical_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>