force-app/main/default/objects/Policy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CURRENT</fullName>
                <default>true</default>
                <label>CURRENT</label>
            </value>
            <value>
                <fullName>RENEWED</fullName>
            </value>
            <value>
                <fullName>NON-RENEWED</fullName>
            </value>
            <value>
                <fullName>CANCELLED - FULL REFUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>