force-app/main/default/objects/Policy__c/fields/Today_60__c.field-meta.xml
<CustomField>
    <fullName>Today_60__c</fullName>
    <formula>TODAY() + (60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today+60</label>
    <type>Date</type>
</CustomField>