force-app/main/default/objects/Policy__c/fields/Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount__c</fullName>
    <formula>Invoice__r.breadwinner_qbo__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>