force-app/main/default/objects/Policy__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>Insured__r.Physical_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip</label>
    <type>Text</type>
</CustomField>