force-app/main/default/objects/Policy__c/fields/Zip_mail__c.field-meta.xml
<CustomField>
    <fullName>Zip_mail__c</fullName>
    <formula>Insured__r.Mailing_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip</label>
    <type>Text</type>
</CustomField>