force-app/main/default/objects/Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Insured__c</columns>
    <columns>Agent__c</columns>
    <columns>Policy_Period_Begins__c</columns>
    <columns>PPE2__c</columns>
    <columns>Policy_Version__c</columns>
    <columns>Invoice__c</columns>
    <columns>Annual_Premium2__c</columns>
    <columns>Amount_Received__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Number_of_Units__c</columns>
    <columns>Quote__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>