force-app/main/default/objects/Policy__c/listViews/Non_Renewal_List.listView-meta.xml
<ListView>
    <fullName>Non_Renewal_List</fullName>
    <columns>NAME</columns>
    <columns>Insured__c</columns>
    <columns>Agent__c</columns>
    <columns>Status__c</columns>
    <columns>Policy_Period_Begins__c</columns>
    <columns>PPE2__c</columns>
    <columns>Days_Left__c</columns>
    <columns>Annual_Premium2__c</columns>
    <columns>Number_of_Units__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lapse__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Non-Renewal/Cancellation List</label>
</ListView>